// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontSizeRulesForTokens Theme: jobStreet Rules 1`] = `
Object {
  ".interaction": Object {
    "fontSize": "14px",
    "lineHeight": "20px",
    "paddingBottom": "12px",
    "paddingTop": "12px",
  },
  ".large": Object {
    "fontSize": "16px",
    "lineHeight": "24px",
  },
  ".level1": Object {
    "fontSize": "28px",
    "lineHeight": "36px",
  },
  ".level2": Object {
    "fontSize": "24px",
    "lineHeight": "32px",
  },
  ".level3": Object {
    "fontSize": "20px",
    "lineHeight": "28px",
  },
  ".standard": Object {
    "fontSize": "14px",
    "lineHeight": "20px",
  },
  "@media screen and (min-width: 768px)": Object {
    ".level1": Object {
      "fontSize": "36px",
      "lineHeight": "44px",
    },
    ".level2": Object {
      "fontSize": "30px",
      "lineHeight": "36px",
    },
    ".level3": Object {
      "fontSize": "24px",
      "lineHeight": "32px",
    },
  },
}
`;

exports[`fontSizeRulesForTokens Theme: seekAnz Rules 1`] = `
Object {
  ".interaction": Object {
    "fontSize": "16px",
    "lineHeight": "24px",
    "paddingBottom": "12px",
    "paddingTop": "12px",
  },
  ".large": Object {
    "fontSize": "18px",
    "lineHeight": "24px",
  },
  ".level1": Object {
    "fontSize": "28px",
    "lineHeight": "36px",
  },
  ".level2": Object {
    "fontSize": "21px",
    "lineHeight": "30px",
  },
  ".level3": Object {
    "fontSize": "21px",
    "lineHeight": "30px",
  },
  ".standard": Object {
    "fontSize": "16px",
    "lineHeight": "24px",
  },
  "@media screen and (min-width: 740px)": Object {
    ".level1": Object {
      "fontSize": "42px",
      "lineHeight": "48px",
    },
    ".level2": Object {
      "fontSize": "28px",
      "lineHeight": "36px",
    },
  },
}
`;

exports[`fontSizeRulesForTokens Theme: seekAsia Rules 1`] = `
Object {
  ".interaction": Object {
    "fontSize": "16px",
    "lineHeight": "24px",
    "paddingBottom": "10px",
    "paddingTop": "10px",
  },
  ".large": Object {
    "fontSize": "18px",
    "lineHeight": "24px",
  },
  ".level1": Object {
    "fontSize": "28px",
    "lineHeight": "36px",
  },
  ".level2": Object {
    "fontSize": "24px",
    "lineHeight": "32px",
  },
  ".level3": Object {
    "fontSize": "20px",
    "lineHeight": "28px",
  },
  ".standard": Object {
    "fontSize": "16px",
    "lineHeight": "24px",
  },
  "@media screen and (min-width: 768px)": Object {
    ".large": Object {
      "fontSize": "20px",
      "lineHeight": "28px",
    },
    ".level1": Object {
      "fontSize": "34px",
      "lineHeight": "44px",
    },
    ".level2": Object {
      "fontSize": "28px",
      "lineHeight": "36px",
    },
    ".level3": Object {
      "fontSize": "24px",
      "lineHeight": "32px",
    },
  },
}
`;

exports[`fontSizeRulesForTokens Theme: wireframe Rules 1`] = `
Object {
  ".interaction": Object {
    "fontSize": "16px",
    "lineHeight": "24px",
    "paddingBottom": "12px",
    "paddingTop": "12px",
  },
  ".large": Object {
    "fontSize": "18px",
    "lineHeight": "24px",
  },
  ".level1": Object {
    "fontSize": "28px",
    "lineHeight": "36px",
  },
  ".level2": Object {
    "fontSize": "21px",
    "lineHeight": "30px",
  },
  ".level3": Object {
    "fontSize": "21px",
    "lineHeight": "30px",
  },
  ".standard": Object {
    "fontSize": "16px",
    "lineHeight": "24px",
  },
  "@media screen and (min-width: 768px)": Object {
    ".level1": Object {
      "fontSize": "42px",
      "lineHeight": "48px",
    },
    ".level2": Object {
      "fontSize": "28px",
      "lineHeight": "36px",
    },
  },
}
`;
